lib/src/compiler/tests/testdata/errors/106.out
error[E029]: invalid escape sequence
 --> line:2:15
  |
2 |   condition: "\g" == "\g"
  |               ^^ invalid escape sequence `\g`
  |